<resources>
    <string name="app_name">BeeSmart Word Assistant</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="menu_practice">Start New Practice</string>
    <string name="menu_progress">Track Your Progress</string>
    <string name="menu_leaderboard">LeaderBoard</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_actions">Actions</string>
    <string name="menu_logout">Logout</string>
    <string name="username">Username :</string>
    <string name="email">Email :</string>
    <string name="score">Total Score :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>